<resources>
    <string name="app_name">Census</string>
    <string name="ErrorMsgAdd">Error al agregar la informacion</string>
    <string name="ErrorMsgUpdate">Error al actualizar la informacion</string>
    <string name="ErrorMsgRemove">Error al eliminar la informacion</string>
    <string name="ErrorMsgGetAll">Error al obtener la lista de datos</string>
    <string name="ErrorMsgGetById">Error al obtener un dato especifico</string>
    <string name="MsgDataNoFound">El dato no fue encontrado</string>
    <string name="btnTextPerson_main">Agregar nueva persona</string>
    <string name="TextID">ID</string>
    <string name="TextName">Nombre</string>
    <string name="TextLastName">Primer apellido</string>
    <string name="TextSLastName">Segundo apellido</string>
    <string name="TextEmail">Correo</string>
    <string name="TextPhone">Telefono</string>
    <string name="TextBirthdate">Fecha Nacimiento</string>
    <string name="TextProvince">Provincia</string>
    <string name="TextState">Canton</string>
    <string name="TextDistrict">Distrito</string>
    <string name="TextAddress">Direccion</string>
    <string name="TextYes">Si</string>
    <string name="TextNo">No</string>
    <string name="TextTitleDialogQuestion">Pregunta</string>
    <string name="MsgDeleteSucess">La informacion se elimino con exito</string>
    <string name="MsgSaveSucess">La informacion se guardo con exito</string>
    <string name="TextDeleteQuestion">Desea eliminar la informacion?</string>
    <string name="TextSaveQuestion">Desea guardar la informacion?</string>
    <string name="MsgDuplicateDate">El dato es duplicado</string>
</resources>